# ClusterBrainPCLData

./: Dockerfile  LICENSE  README.md  client_setup  prompt.md
client_src/: CMakeLists.txt  grpc_client_cpp.cpp
data/: oct-1-small.labels  oct-1-small.pcd  oct-2-medium.labels  oct-2-small.labels  oct-2-small.pcd  oct-3-small.labels  oct-3-small.pcd  output.labels
help/: requirements.txt  visualize.py
proto/: pointcloud.proto
proto_generated/: pointcloud.grpc.pb.cc  pointcloud.grpc.pb.h  pointcloud.pb.cc  pointcloud.pb.h
results/: ChatGptlog  Clustering Algorithm my Approach.odt  grpc_pointcloud_server_pcl_used.cpp
server/: CMakeLists.txt  grpc_pointcloud_server.cpp
